--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.8.2",
     "@astrojs/cloudflare": "^11.0.4",
     "astro": "^4.12.1",
+    "node-ical": "^0.19.0",
     "typescript": "^5.5.3"
   }
 }
