--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro dev --host",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -15,6 +15,8 @@
     "@astrojs/sitemap": "^3.2.0",
     "@astrojs/vercel": "^7.8.1",
     "astro": "^4.12.1",
+    "highlight.js": "^11.11.1",
+    "marked": "^15.0.7",
     "node-ical": "^0.19.0",
     "typescript": "^5.5.3"
   }
