--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/vercel": "^8.1.3",
     "astro": "^5.7.4",
     "highlight.js": "^11.11.1",
+    "jarallax": "^2.2.1",
     "marked": "^15.0.7",
     "typescript": "^5.5.3"
   }
