--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/vercel": "^8.1.3",
     "astro": "^5.7.4",
+    "fast-average-color-node": "^3.1.0",
     "highlight.js": "^11.11.1",
     "jarallax": "^2.2.1",
     "marked": "^15.0.7",
